--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* 
+    Trabalhar no root com variaveis globais para o css
+    Exemplo:  --primary-color: #000000;
+*/
+:root{
+
+}
