--- a/style/style.css
+++ b/style/style.css
@@ -10,5 +10,148 @@
     Exemplo:  --primary-color: #000000;
 */
 :root{
+ --primary-color: #D9D9D9;
+ --second-color: #009DFF;
+ --button-color: rgb(255 255 255 / 16%);
+}
 
+/* Estilização do body */
+
+body{
+    font-family: "Inter", sans-serif; /*Fonte do projetor usando Inter e sans-serif*/
+    background-color: var(--primary-color);
+    color: #000;
+    line-height: 1.6;
+}
+
+#content-herder{
+    position: relative;    
+    background-color: var(--second-color);
+    width: 100%;
+    height: 300px;
+}
+
+#content-herder h1{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 24px;
+    font-weight: bolder;   
+}
+
+#content-herder #menu{
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    font-size: 16px;
+    font-weight: normal;   
+}
+
+/* Menu */
+.button {
+  background: var(--button-color);
+  border: 0;
+  width: 56px;
+  height: 56px;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  padding: 0;
+  opacity: 0.6;
+  scale: 0.7;
+  border-radius: 8px;
+  transition: 0.25s;
+}
+
+.button:hover {
+  opacity: 1;
+  background: var(--button-color);
+}
+
+.burger {
+  position: relative;
+  width: 32px;
+  border: 0;
+}
+
+.burger,
+.burger::before,
+.burger::after {
+  display: block;
+  border-radius: 2px;
+  height: 2px;
+  background: #f9f9f9;
+  transition: 0.3s;
+}
+
+.burger::before,
+.burger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+}
+
+.burger::before {
+  top: -8px;
+}
+
+.burger::after {
+  top: 8px;
+}
+
+.ham {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  transform: scaleY(0.8) scaleX(1.2);
+}
+
+.burger-6.is-closed.hamRotate {
+  transform: rotate(45deg) scale(1.2);
+}
+
+.line {
+  fill: none;
+  transition: 0.4s;
+  stroke: #000000;
+  stroke-width: 3;
+  stroke-linecap: round;
+}
+.ham1 .top {
+  stroke-dasharray: 40 139;
+}
+.ham1 .bottom {
+  stroke-dasharray: 40 180;
+}
+.burger-6.is-closed.ham1 .top {
+  stroke-dashoffset: -98px;
+}
+.burger-6.is-closed.ham1 .bottom {
+  stroke-dashoffset: -138px;
+}
+
+/* Texto do menu */
+
+ul li{
+    list-style: none;
+}
+
+.esconder{
+    display: none;
+}
+
+ul li a {
+    direction: rtl;
+    text-decoration: none;
+    color: #fff;
+    
+}
+
+.mostra {
+    display: block;
 }
