--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@
  --second-color: #009DFF;
  --color-general: #ffffff;
  --button-color: rgb(255 255 255 / 16%);
+ --stroke-color: #000000;
 }
 
 /* Estilização do body */
@@ -22,7 +23,7 @@ body{
   height: 1000%;
     font-family: "Inter", sans-serif; /*Fonte do projetor usando Inter e sans-serif*/
     background-color: var(--primary-color);
-    color: #000;
+    color: var(--stroke-color);
     line-height: 1.6;
 
 }
@@ -121,7 +122,7 @@ body{
 .line {
   fill: none;
   transition: 0.4s;
-  stroke: #000000;
+  stroke: var(--stroke-color);
   stroke-width: 3;
   stroke-linecap: round;
 }
@@ -147,7 +148,7 @@ ul li{
 ul li a {
     direction: rtl;
     text-decoration: none;
-    color: #fff;
+    color: var(--color-general);
     
 }
 
