--- a/style/style.css
+++ b/style/style.css
@@ -51,6 +51,13 @@ body{
     font-weight: normal;   
 }
 
+.Menu-fixed {
+  width: 100%;
+  height: 30px;
+  position: fixed; 
+  z-index: 999;
+}
+
 /* Menu */
 .button {
   background: var(--button-color);
@@ -152,12 +159,17 @@ ul li a {
     
 }
 
+
 .esconder{
     display: none;
 }
 
 .mostra {
     display: block;
+}
+
+.text-menu {
+  color: var(--stroke-color);
 }
 
 /* H2 com titulo do herder */
