--- a/style/media-query.css
+++ b/style/media-query.css
@@ -1,5 +1,5 @@
 /* Tela de mobile 321px a 376 */
-@media screen and (min-width: 321px) and (max-width: 376px) {
+/* @media screen and (min-width: 321px) and (max-width: 376px) {
    .card1{
         margin-left: 30px;
         padding-right: 10px;
@@ -9,22 +9,13 @@
        margin: 25px 0px 0px 110px; 
     }
 
-}
+} */
 
 /* Tela de mobile 376px até 426px */
-@media screen and (min-width: 377px) and (max-width: 426px) {
-    .card1{
-        margin-left: 50px;
-        padding-right: 10px;
-    }
-
-    .card3 {
-       margin: 25px 0px 0px 130px; 
-    }
-}
+/* s */
 
 /* Tela de tablet 427px até 768px */
-@media screen and (min-width: 427px) and (max-width: 768px) {
+/* @media screen and (min-width: 427px) and (max-width: 768px) {
     
     #button {
         display: none;
@@ -57,10 +48,10 @@
         padding-left: 10px;
     }
 
-}
+} */
 
 /* Tela de laptop de 769px até 1024px */
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+/* @media screen and (min-width: 769px) and (max-width: 1024px) {
    
     #button {
         display: none;
@@ -114,10 +105,10 @@
     }
 
 
-}
+} */
 
 /* Tela de computador acima de 1025px */
-@media screen and (min-width: 1026px) {
+/* @media screen and (min-width: 1026px) {
     #button {
         display: none;
     }
@@ -169,4 +160,4 @@
         padding-left: 10px;
     }
 
-}
+} */
