--- a/style/midia-query.css
+++ b/style/midia-query.css
@@ -17,4 +17,24 @@
         padding-right: 5px;
     }
 
+    .esconder a {
+        position: relative;
+        text-decoration: none;
+        font-size: 18px;
+        /* padding: 10px 0; */
+        transition: color 0.3s ease;
+    }
+
+    .esconder .laser {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 3px;
+        width: 0;
+        background: blue;
+        box-shadow: 0 0 10px blue, 0 0 20px blue;
+        border-radius: 2px;
+        transition: all 0.3s ease;
+    }
+
 }
