--- a/style/style.css
+++ b/style/style.css
@@ -307,22 +307,23 @@ section {
   margin: auto;
 }
 
-.container-slid {
-  width: 100%;
-  max-width: 700px;
-  overflow: hidden;
+.carrossel {
   position: relative;
+  width: 100%;
+  max-width: 900px;
   margin: auto;
-  margin-top: 70px;
-  margin-bottom: 70px;
-  padding: 0 20px;
 }
 
-/* Área dos cards */
+.container-slid {
+  width: 100%;
+  overflow: hidden;
+  margin: 60px auto;
+}
+
 .slides {
   display: flex;
   gap: 40px;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.4s ease;
 }
 
 .img-cads {
@@ -331,17 +332,12 @@ section {
   text-align: center;
 }
 
-.icon-tec {
-  width: 100px;
-}
-
-/* Mobile: mostrar apenas 1 card */
 @media (max-width: 768px) {
   .img-cads {
     width: 100%;
   }
   .slides {
-    gap: 10px;
+    gap: 20px;
   }
 }
 
@@ -354,15 +350,14 @@ section {
   background: none;
   border: none;
   cursor: pointer;
-  z-index: 99;
+  z-index: 10;
 }
 
-.prev-btn {
-  left: 10px;
+.prev-btn { 
+  left: -10px; 
 }
-
-.next-btn {
-  right: 10px;
+.next-btn { 
+  right: -10px; 
 }
 
 .prev-btn img,
@@ -377,20 +372,19 @@ section {
 
 .slides2 {
   height: 250px;
-  display: flex;
-  gap: 40px;
-  transition: transform 0.5s ease-in-out;
 }
 
 .cards-projects {
   width: 230px;
-  height: 190px;
+  height: 250px;
   padding: 15px;
   background: #fff;
-  box-shadow:
-    0px 10px 20px rgba(0,0,0,0.10),
-    10px 20px 30px rgba(0,0,0,0.12),
-    20px 30px 40px rgba(0,0,0,0.14),
-    30px 40px 50px rgba(0,0,0,0.15);
+  filter: 
+        drop-shadow(-80px 72px 30px rgba(0,0,0,0.25))
+        drop-shadow(-51px 46px 28px rgba(0,0,0,0.23))
+        drop-shadow(-29px 26px 23px rgba(0,0,0,0.22))
+        drop-shadow(-13px 12px 17px rgba(0,0,0,0.20))
+        drop-shadow(-3px 3px 9px rgba(0,0,0,0.18));
+  z-index: 3;
 
 }
