--- a/style/style.css
+++ b/style/style.css
@@ -307,17 +307,12 @@ section {
   margin: 0 auto;
 }
 
-.carrossel {
-  position: relative;
-  width: 100%;
-  max-width: 900px;
-  margin: auto;
-}
-
 .container-slid {
-  width: 100%;
   overflow: hidden;
-  margin: 60px auto;
+  width: 100%;
+  max-width: 700px;
+  margin: 70px auto;
+  padding: 0 20px;
 }
 
 .slides {
