--- a/style/style.css
+++ b/style/style.css
@@ -50,13 +50,9 @@ body{
 #content-herder #menu{
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 0;
     font-size: 16px;
     font-weight: normal;   
-}
-
-#menu {
-  height: 100em;
 }
 
 .Menu-fixed {
@@ -460,6 +456,10 @@ section {
 @media (max-width: 768px) {
   .slides {
     gap: 10px;
+  }
+
+  #menu:has {
+    height: 20em;
   }
 
   .esconder {
