--- a/style/style.css
+++ b/style/style.css
@@ -361,7 +361,7 @@ section {
 .container-slid2 {
   overflow: hidden;
   width: 100%;
-  height: 300px;
+  height: 400px;
   max-width: 700px;
   margin: 70px auto;
   padding: 0 20px;
@@ -369,20 +369,29 @@ section {
 
 .slides2 {
   display: flex;
-  gap: 40px;
+  gap: 20px;
   transition: transform 0.5s ease-in-out;
 }
 
 .cards-projects {
   width: 230px;
-  height: 190px;
+  height: 230px;
   margin-top: 30px;
+  padding: 30px;
   background: #fff;
   box-shadow:
     0px 10px 20px rgba(0,0,0,0.10),
     10px 20px 30px rgba(0,0,0,0.12),
     20px 30px 40px rgba(0,0,0,0.14),
     30px 40px 50px rgba(0,0,0,0.15);
+}
+
+.titleProject {
+  padding-bottom: 5px;
+}
+
+.steckused {
+  padding-bottom: 8px;
 }
 
 .container-footer {
