--- a/style/style2.css
+++ b/style/style2.css
@@ -1,33 +1,48 @@
-
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+:root {
+    --color-letras: #0E2C59;
+    --primary-color: #D9D9D9;
+    --backgound-color-clumn: #009DFF;
+    --second-color: #58af9b;
+    --terceiro-color: #ecf0f1;
+    --light-color: #fff;
+    --gray-color: #bdc3c7;
+    --gray2-color: #95a5a6;
+    --border-radius: 15px;
+    --color-p: #000;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: var(--primary-color);
 }
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ecf0f1;
+    background-color: var(--primary-color);
 }
 .content {
-    background-color: #fff;
+    background-color: var(--primary-color);
     border-radius: 15px;
     width: 960px;
     height: 70%;
     justify-content: space-between;
     align-items: center;
     position: relative;
+    border: 1px solid var(--gray-color); 
 }
 .content::before {
     content: "";
     position: absolute;
-    background-color: #58af9b;
+    background-color: var(--backgound-color-clumn);
     width: 40%;
     height: 100%;
     border-top-left-radius: 15px;
@@ -42,10 +57,10 @@ body {
     text-transform: capitalize;
 }
 .title-primary {
-    color: #fff;
+    color: var(--color-letras);
 }
 .title-second {
-    color: #58af9b;
+    color: var(--color-letras);
 }
 .description {
     font-size: 14px;
@@ -53,15 +68,15 @@ body {
     line-height: 30px;
 }
 .description-primary {
-    color: #fff;
+    color: var(--color-p);
 }
 .description-second {
-    color: #7f8c8d;
+    color: var(--color-p);
 }
 .btn {
     border-radius: 15px;
     text-transform: uppercase;
-    color: #fff;
+    color: var(--light-color);
     font-size: 10px;
     padding: 10px 40px;
     cursor: pointer;
@@ -73,22 +88,22 @@ body {
 }
 .btn-primary {
     background-color: transparent;
-    border: 1px solid #fff;
+    border: 1px solid var(--light-color);
     transition: background-color .5s;
 }
 .btn-primary:hover {
-    background-color: #fff;
-    color: #58af9b;
+    background-color: var(--light-color);
+    color: var(--second-color);
 }
 .btn-second {
-    background-color: #58af9b;
-    border: 1px solid #58af9b;
+    background-color: var(--backgound-color-clumn);
+    border: 1px solid var(--second-color);
     transition: background-color .5s;
 }
 .btn-second:hover {
-    background-color: #fff;
-    border: 1px solid #58af9b;
-    color: #58af9b;
+    background-color: var(--light-color);
+    border: 1px solid var(--second-color);
+    color: var(--second-color);
 }
 .first-content {
     display: flex;
@@ -117,22 +132,22 @@ body {
     transition: background-color .5s;
 }
 .link-social-media:hover .item-social-media{
-    background-color: #58af9b;
-    color: #fff;
-    border-color: #58af9b;
+    background-color: var(--backgound-color-clumn);
+    color: var(--light-color);
+    border-color: var(--second-color);
 }
 .list-social-media {
     display: flex;
     list-style-type: none;
 }
 .item-social-media {
-    border: 1px solid #bdc3c7;
+    border: 1px solid var(--gray-color);
     border-radius: 50%;
     width: 35px;
     height: 35px;
     line-height: 35px;
     text-align: center;
-    color: #95a5a6;
+    color: var(--gray2-color);
 }
 .form {
     display: flex;
@@ -143,7 +158,7 @@ body {
     height: 45px;
     width: 100%;
     border: none;
-    background-color: #ecf0f1;
+    background-color: var(--terceiro-color);
 }
 input:-webkit-autofill 
 {    
