--- a/style/style3.css
+++ b/style/style3.css
@@ -69,7 +69,8 @@ body {
     margin: auto;
 }
 
-.plano {
+.planos {
+    position: relative;
     width: 100%;
 }
 
@@ -79,6 +80,7 @@ h2 {
     font-family: 'Titillium Web', sans-serif;
     font-weight: bold;
     font-size: 32px;
+    padding-bottom: 20px;
 }
 
 .titulo0 {
@@ -92,6 +94,11 @@ span {
 }
 
 .notamate {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    display: inline-block;
+    padding: 0;
     color: #1E293B;
 } 
 
