--- a/style/midia-query.css
+++ b/style/midia-query.css
@@ -8,6 +8,18 @@
   .text-menu { display: inline-block; }
 }
 
+@media screen and (max-width: 768px) {
+    .Menu-fixed {
+      position: relative;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 500px) {
+  #cont1 {
+      margin-top: 100vh;
+    }
+}
+
 @media screen and (max-width: 767px) {
   /* em mobile mostrar botão hambúrguer */
   #button { display: block; }
